<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vacation Planner</string>

    <string name="vacation_title">Vacation Title</string>
    <string name="vacation_lodging">Vacation Lodging</string>
    <string name="date_format">YYYY-MM-DD</string>
    <string name="lodging_header">Lodging: </string>
    <string name="start_date_header">Start Date: </string>
    <string name="end_date_header">End Date: </string>
    <string name="date_header">Date: </string>

    <string name="share_vacation">Share Vacation Details</string>
    <string name="add_vacation">Add Vacation</string>
    <string name="edit_vacation">Edit Vacation</string>
    <string name="delete_vacation">Delete Vacation</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enable_vacation_notifications">Enable Vacation Notifications</string>
    <string name="pref_vacation_notifications_summary">Turn vacation start and end notifications on or off</string>
    <string name="settings">Settings</string>

    <string name="view_excursions">View Excursions</string>
    <string name="excursions">Excursions</string>
    <string name="excursion_title">Excursion Title</string>
    <string name="add_excursion">Add Vacation</string>
    <string name="edit_excursion">Edit Excursion</string>
    <string name="excursion_edit">Edit</string>
    <string name="excursion_delete">Delete</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="start_date_title">Start Date</string>
    <string name="detail_vacation_lodging">Lodging</string>
    <string name="end_date_title">End Date</string>
    <string name="app_icon_description">Vacation Planner Icon</string>
    <string name="tap_to_continue">Tap to Continue</string>
    <string name="enable_excursion_notifications">Enable Excursion Notifications</string>
    <string name="pref_excursion_notifications_summary">Turn excursion start and end notifications on or off</string>

</resources>