<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_vacation"
        android:icon="@drawable/add"
        android:title="@string/add_vacation"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit_vacation"
        android:icon="@drawable/edit"
        android:title="@string/edit_vacation"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_vacation"
        android:icon="@drawable/delete"
        android:title="@string/delete_vacation"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_preferences"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>