<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/add_excursion_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/excursion_title"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/add_excursion_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_format"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/excursion_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/excursion_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>