<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_vacation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vacation_title"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_vacation_lodging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vacation_lodging"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_vacation_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vacation_date"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edit_vacation_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vacation_date"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TextFields"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>