<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/vacation_icon"
        android:contentDescription="@string/app_icon_description"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_continue"
        android:textSize="18sp"
        android:textColor="@android:color/darker_gray" />
</LinearLayout>