<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="5dp"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/excursion_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/excursion_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/excursion_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_header"
            android:paddingEnd="5dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/excursion_title" />

        <TextView
            android:id="@+id/excursion_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_format"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/excursion_date_header"
            app:layout_constraintTop_toBottomOf="@+id/excursion_title" />

        <ImageButton
            android:id="@+id/excursion_options"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/edit_excursion"
            android:src="@drawable/options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>